Fix code styling to remove gaps

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -203,7 +203,7 @@ pre {
 	display: block;
 	background-color: #2c2c2c;
 	color: #fff;
-	line-height: 19px;
+	line-height: 20px;
 	overflow-x: auto;
 
 	.linenums {
@@ -213,14 +213,19 @@ pre {
 		color: #6b6b6b;
 		background-color: #2c2c2c;
 		border-right: 1px solid #3f3f3f;
+
+		span {
+			display: block;
+		}
 	}
 	.code {
 		width: 100%;
 		padding: 16px 16px 16px 48px;
 
 		.codeline {
-			display: inline-block;
+			display: block;
 			width: 100%;
+			white-space: nowrap;
 
 			&:before {
 				content: "\200B";
